add API Product CRUD, with Swagger docs
